WexGit/Wex_DX/force-app/main/default/objects/forseva1__CorteraCPR__c/fields/BankruptcyCount__c.field-meta.xml
<CustomField>
    <fullName>BankruptcyCount__c</fullName>
    <label>Bankruptcy Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>