WexGit/Wex_DX/force-app/main/default/objects/forseva1__CorteraCPR__c/fields/CorporateFinancialSummaryLiabilities__c.field-meta.xml
<CustomField>
    <fullName>CorporateFinancialSummaryLiabilities__c</fullName>
    <label>Liabilities</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>