WexGit/Wex_DX/force-app/main/default/objects/forseva1__CorteraCPR__c/fields/CorporateFinancialSummaryNetWorth__c.field-meta.xml
<CustomField>
    <fullName>CorporateFinancialSummaryNetWorth__c</fullName>
    <label>Net Worth</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>