WexGit/Wex_DX/force-app/main/default/objects/forseva1__CorteraCPR__c/fields/CprReportHighestBalance__c.field-meta.xml
<CustomField>
    <fullName>CprReportHighestBalance__c</fullName>
    <label>Highest Balance</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>