WexGit/Wex_DX/force-app/main/default/objects/forseva1__CorteraCPR__c/fields/RiskScorecardRiskRating__c.field-meta.xml
<CustomField>
    <fullName>RiskScorecardRiskRating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Rating</label>
    <length>1</length>
    <type>Text</type>
</CustomField>